--- a/src/components/uploader/uploader.scss
+++ b/src/components/uploader/uploader.scss
@@ -1,9 +1,15 @@
-.dropzone-container>div {
-    max-width: 40rem;
-    min-height: 10rem;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    border: 0.25rem dashed;
-    margin: 0 auto;
+.dropzone {
+    &-container>div:first-of-type {
+        max-width: 40rem;
+        min-height: 10rem;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        border: 0.25rem dashed;
+        margin: 0 auto;
+    }
+
+    &-preview {
+        display: none;
+    }
 }
