--- a/src/components/preview/preview.scss
+++ b/src/components/preview/preview.scss
@@ -34,4 +34,11 @@
         justify-content: space-between;
         padding: 0 0.5rem;
     }
+    .editPage{
+        height: 1024px;
+        width: 1024px;
+        position: absolute;
+        z-index: 999;
+        background-color: rgba(0,0,0,0.5);
+    }
 }
